updated - styles - fixed overflowing text - language colours - links to blog and twitter/x - icons added - escpae HTML for descriptions

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 /* ==========================
 CSS Reset by Josh Comeau
 ========================== */
@@ -82,8 +84,56 @@ h6 {
 DOM Styles
 ========================== */
 
-fieldset {
+* {
+  box-sizing: border-box;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
+}
+
+:root {
+  --dark-gray: rgb(31, 31, 31);
+  --gray: rgb(43, 41, 41);
+  --light-gray: rgb(226, 226, 226);
+  --violet: rgb(180, 106, 180);
+}
+
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding: 3rem 1rem;
+  font-family: "Poppins", sans-serif;
+  background: var(--dark-gray);
+  color: var(--light-gray);
+}
+
+header {
+  text-align: center;
+}
+
+h1 {
+  line-height: 2rem;
+  color: var(--violet);
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin-top: 1.5rem;
+}
+
+form {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+form * {
   border: none;
+  outline: transparent;
+  border-radius: 0.25rem;
 }
 
 .sr-only:not(:focus):not(:active) {
@@ -94,4 +144,194 @@ fieldset {
   position: absolute;
   white-space: nowrap;
   width: 1px;
+}
+
+fieldset {
+  border: none;
+  padding: 0;
+  width: 100%;
+  display: flex;
+}
+
+input[type="text"] {
+  background-color: var(--gray);
+  color: var(--light-gray);
+  padding: 0.5rem 1rem;
+  flex-grow: 1;
+  margin-right: 0.5rem;
+}
+
+input[type="submit"] {
+  font-weight: 700;
+  background-color: var(--violet);
+  cursor: pointer;
+  transition: all 0.2s ease-in;
+}
+
+input[type="submit"],
+.view-profile-btn:hover {
+  opacity: 80%;
+}
+
+a,
+a:visited {
+  color: var(--light-gray);
+  text-decoration: none;
+  transition: all 0.15s ease-in;
+}
+
+a:hover {
+  color: white;
+}
+
+i {
+  color: var(--violet);
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  font-size: 0.75rem;
+  margin-top: 2rem;
+  padding-top: 1rem;
+  border-top: 1px solid var(--gray);
+}
+
+.description {
+  margin-top: 10px;
+}
+
+.github-info {
+  background-color: var(--gray);
+  padding: 2rem 1rem;
+  border-radius: 0.25rem;
+}
+
+.avatar {
+  border-radius: 100%;
+  width: 150px;
+  border: 5px solid var(--violet);
+}
+
+.user-info {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+  align-items: center;
+  margin-bottom: 2rem;
+}
+
+.name {
+  font-size: 1.75rem;
+  font-weight: bold;
+}
+
+.bio {
+  text-align: center;
+  font-style: italic;
+}
+
+.login {
+  font-size: 1.15rem;
+  font-weight: 400;
+  color: var(--violet);
+}
+
+.view-profile-btn {
+  background-color: var(--violet);
+  padding: 1rem;
+  border-radius: 4rem;
+  font-weight: 700;
+  color: var(--dark-gray) !important;
+  margin-top: 1rem;
+  cursor: pointer;
+  transition: all 0.2s ease-in;
+}
+
+.user-info-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  width: 100%;
+}
+
+.user-info-container > div {
+  text-align: center;
+}
+
+.children-background {
+  margin-bottom: 1.5rem;
+  align-items: normal;
+}
+
+.children-background > div {
+  padding: 0.75rem;
+  background-color: var(--dark-gray);
+  border-radius: 0.25rem;
+}
+
+.repos-container {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+
+.repo-name,
+.repo-name:visited {
+  color: var(--violet);
+  font-weight: 600;
+}
+
+.repo-desc {
+  margin-top: 0.5rem;
+}
+
+.repo-info {
+  margin-top: 1.5rem;
+  display: flex;
+  gap: 0.5rem;
+  font-size: 13px;
+}
+
+@media (min-width: 601px) {
+  .user-info-head {
+    flex-direction: row;
+    align-items: start;
+    width: 100%;
+    gap: 2rem;
+  }
+
+  .user-info-head > .user-info-container {
+    justify-content: start;
+    align-items: start;
+    width: auto;
+  }
+
+  .info-flex-row {
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+
+  .children-background > div {
+    width: 100%;
+  }
+
+  .repos-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .repo-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: 1024px) {
+  
 }
